--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,19 @@ jobs:
           submodules: true
       - name: Install R
         uses: r-lib/actions/setup-r@v2
+      - name: Install R deps
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 2
+          packages: |
+            any::ggplot2
+            any::readr
+            any::readxl
+            any::haven
+            any::dplyr
+            any::tidyr
+            any::VIM
+            any::rmarkdown
+            any::sessioninfo
       - name: Render RMarkdown
         run: Rscript utils/doc.R
