ci: scheduled run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 permissions:
   contents: read
 on:
+  schedule:
+    - cron: "0 16 * * *" # 0:00 Asia/Shanghai
   push:
     branches: [master]
   pull_request:
