fix: grant write permission for fmt

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,3 +1,6 @@
+permissions:
+  contents: write
+
 on:
   push:
     # paths: ["**.[rR]", "**.[qrR]md", "**.[rR]markdown", "**.[rR]nw", "**.[rR]profile"]
